--- a/_posts/2020-08-10-what-is-rmarkdown/what-is-rmarkdown.Rmd
+++ b/_posts/2020-08-10-what-is-rmarkdown/what-is-rmarkdown.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ## ماهو R Markdown
 
 R Markdown
-هي صيغة ملف تساعدنا على دمج تحليل البيانات مع الكود المستخدم لعمل التحليل في ملف واحد.
+هي صيغة ملف تساعدنا على دمج تحليل البيانات مع الكود المستخدم لعمل التحليل في ملف واحد تفاعلي.
 
 مثلا، بدل ان تفتح ملف في 
 Microsoft Word  
